ah@g.c/op.txt
Error: Could not find or load main class ah@g.c;HelloWorld
Hello, World
ah@g.c\check.java:1: error: class, interface, or enum expected
from java.utils import Scanner
^
ah@g.c\check.java:1: error: reached end of file while parsing
from java.utils import Scanner
                              ^
2 errors
